--- a/overlays/dev/cpd-config.yaml
+++ b/overlays/dev/cpd-config.yaml
@@ -37,8 +37,8 @@ cp4d:
   # - openpages
   # - planning-analytics
   # - product-master
-  # - speech-to-text
-  # - text-to-speech
+  - speech-to-text
+  - text-to-speech
   # - watson-assistant
   - watson-discovery
   # - watsonx-ai
@@ -278,7 +278,7 @@ cp4d:
     tts_size: xsmall
     # noobaa_account_secret: noobaa-admin
     # noobaa_cert_secret: noobaa-s3-serving-cert
-    state: removed
+    state: installed
 
   - name: watsonx_ai
     description: watsonx.ai
@@ -422,7 +422,7 @@ cp4d:
   - name: wkc
     description: IBM Knowledge Catalog
     size: small
-    state: removed
+    state: installed
     installation_options:
       enableKnowledgeGraph: False
       enableDataQuality: False
